#130: Fix code-tags style to nowrap

--- a/src/styles/pages/articles/articles.module.scss
+++ b/src/styles/pages/articles/articles.module.scss
@@ -1,136 +1,140 @@
 .heading {
-	font-weight: 700;
+  font-weight: 700;
 }
 .articles {
-	h2 {
-		position: relative;
-		font-size: 20px;
-		font-weight: 700;
-		padding: 1.5em 0;
-		margin: 1.5em 0;
-		@media screen and (min-width: 560px) {
-			font-size: 22px;
-		}
-		@media screen and (min-width: 768px) {
-			font-size: 24px;
-		}
-		&::after {
-			content: '';
-			position: absolute;
-			left: 0;
-			bottom: -2px;
-			width: 30px;
-			height: 2px;
-			background-color: #d1d5db;
-		}
-	}
-	h3 {
-		position: relative;
-		font-size: 16px;
-		font-weight: 700;
-		padding: 1em 0;
-		margin: 1em 0;
-		@media screen and (min-width: 560px) {
-			font-size: 18px;
-		}
-		@media screen and (min-width: 768px) {
-			font-size: 20px;
-		}
-		&::after {
-			content: '';
-			position: absolute;
-			left: 0;
-			bottom: -2px;
-			width: 30px;
-			height: 2px;
-			background-color: #d1d5db;
-		}
-	}
-	h4 {
-		position: relative;
-		font-size: 14px;
-		font-weight: 700;
-		padding: 1em 0;
-		margin: 1em 0;
-		@media screen and (min-width: 560px) {
-			font-size: 16px;
-		}
-		@media screen and (min-width: 768px) {
-			font-size: 18px;
-		}
-		&::after {
-			content: '';
-			position: absolute;
-			left: 0;
-			bottom: -2px;
-			width: 30px;
-			height: 2px;
-			background-color: #d1d5db;
-		}
-	}
-	p {
-		font-size: 14px;
-		line-height: 2em;
-		@media screen and (min-width: 560px) {
-			font-size: 16px;
-		}
-		code {
-			padding: 4px 8px;
-			margin: 0 5px;
-			color: rgb(236, 0, 0);
-			border-radius: 4px;
-			box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2) inset, -2px -2px 2px 0 rgba(255, 255, 255, 1) inset;
-			font-size: 12px;
-			@media screen and (min-width: 560px) {
-				font-size: 13px;
-			}
-			@media screen and (min-width: 768px) {
-				font-size: 14px;
-			}
-		}
-		a {
-			text-decoration: underline;
-		}
-	}
-	pre {
-		margin: 1em 0;
-		position: relative;
-		code {
-			padding: 5em 2em 2em !important;
-			border-radius: 12px;
-			box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 1) inset, -2px -2px 2px 0 rgba(255, 255, 255, 1) inset;
-			font-size: 12px;
-			@media screen and (min-width: 560px) {
-				padding: 4.5em 2em 2em !important;
-				font-size: 13px;
-			}
-			@media screen and (min-width: 768px) {
-				padding: 4em 2em 2em !important;
-				font-size: 14px;
-			}
-		}
-	}
-	blockquote {
-		position: relative;
-		margin: 1em 0;
-		padding-left: 1em;
-		border-left: 4px solid #e5e7eb;
-		color: #9ca3af;
-		font-size: 14px;
-		@media screen and (min-width: 560px) {
-			font-size: 16px;
-		}
-	}
+  h2 {
+    position: relative;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 1.5em 0;
+    margin: 1.5em 0;
+    @media screen and (min-width: 560px) {
+      font-size: 22px;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 24px;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 30px;
+      height: 2px;
+      background-color: #d1d5db;
+    }
+  }
+  h3 {
+    position: relative;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 1em 0;
+    margin: 1em 0;
+    @media screen and (min-width: 560px) {
+      font-size: 18px;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 20px;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 30px;
+      height: 2px;
+      background-color: #d1d5db;
+    }
+  }
+  h4 {
+    position: relative;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 1em 0;
+    margin: 1em 0;
+    @media screen and (min-width: 560px) {
+      font-size: 16px;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 18px;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 30px;
+      height: 2px;
+      background-color: #d1d5db;
+    }
+  }
+  p {
+    font-size: 14px;
+    line-height: 2em;
+    @media screen and (min-width: 560px) {
+      font-size: 16px;
+    }
+    code {
+      padding: 4px 8px;
+      margin: 0 5px;
+      white-space: nowrap;
+      color: rgb(236, 0, 0);
+      border-radius: 4px;
+      box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2) inset,
+        -2px -2px 2px 0 rgba(255, 255, 255, 1) inset;
+      font-size: 12px;
+      @media screen and (min-width: 560px) {
+        font-size: 13px;
+      }
+      @media screen and (min-width: 768px) {
+        font-size: 14px;
+      }
+    }
+    a {
+      text-decoration: underline;
+    }
+  }
+  pre {
+    margin: 1em 0;
+    position: relative;
+    code {
+      padding: 5em 2em 2em !important;
+      border-radius: 12px;
+      box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 1) inset,
+        -2px -2px 2px 0 rgba(255, 255, 255, 1) inset;
+      font-size: 12px;
+      @media screen and (min-width: 560px) {
+        padding: 4.5em 2em 2em !important;
+        font-size: 13px;
+      }
+      @media screen and (min-width: 768px) {
+        padding: 4em 2em 2em !important;
+        font-size: 14px;
+      }
+    }
+  }
+  blockquote {
+    position: relative;
+    margin: 1em 0;
+    padding-left: 1em;
+    border-left: 4px solid #e5e7eb;
+    color: #9ca3af;
+    font-size: 14px;
+    @media screen and (min-width: 560px) {
+      font-size: 16px;
+    }
+  }
 }
 .preCodeLanguage::before {
-	content: attr(data-language);
-	padding: 0.5em 2em;
-	font-size: 12px;
-	color: #fff;
-	box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.7) inset, -2px -2px 2px 0 rgba(255, 255, 255, 0.2) inset;
-	background-color: #333;
-	position: absolute;
-	top: 1.5em;
-	left: 2em;
-	border-radius: 8px;
+  content: attr(data-language);
+  padding: 0.5em 2em;
+  font-size: 12px;
+  color: #fff;
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.7) inset,
+    -2px -2px 2px 0 rgba(255, 255, 255, 0.2) inset;
+  background-color: #333;
+  position: absolute;
+  top: 1.5em;
+  left: 2em;
+  border-radius: 8px;
 }
